<resources>
    <string name="app_name">MHIS</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="signInLabel">Signin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="registration">Registration</string>
    <string name="patientId">ID</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="dob">Date of birth</string>
    <string name="age">Age</string>
    <string name="homeAddress">Home address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="alternateContact">Alternate contact</string>
    <string name="alternateContactPhone">Alternate contact Phone number</string>
    <string name="reason">Reason for coming to facility</string>
    <string name="firstContact">First contact</string>
    <string name="scheduledContact">Scheduled contact</string>
    <string name="specificComplaint">Specific complaint</string>
    <string name="specificComplaints">Specific complaint(s)</string>
    <string name="abnormalVaginalDischarge">Abnormal vaginal discharge</string>
    <string name="Jaundice">Jaundice</string>
    <string name="changesInBloodPressure">Changes in blood pressure</string>
    <string name="constipation">Constipation</string>
    <string name="contractions">Contractions</string>
    <string name="cough">Cough</string>
    <string name="depression">Depression</string>
    <string name="anxiety">Anxiety</string>
    <string name="dizziness">Dizziness</string>
    <string name="domesticViolence">Domestic violence</string>
    <string name="extremePelvicPain">Extreme pelvic pain - can\'t walk (symphasis pubis dysfunction)</string>
    <string name="fullAbdominalPain">Full abdominal pain</string>
    <string name="fluSymptoms">Flu symptoms</string>
    <string name="fluidLoss">Fluid loss</string>
    <string name="headache">Headache</string>
    <string name="heartburn">Heartburn</string>
    <string name="legCramps">Leg cramps</string>
    <string name="legPain">Leg pain</string>
    <string name="legRedness">Leg redness</string>
    <string name="lowBackPain">Low back pain</string>
    <string name="pelvicPain">Pelvic pain</string>
    <string name="nauseaVomitingDiarrhoea">Nausea / Vomiting / Diarrhoea</string>
    <string name="noFetalMovement">No fetal movement</string>
    <string name="oedema">Oedema</string>
    <string name="otherBleeding">Other bleeding</string>
    <string name="otherPain">Other pain</string>
    <string name="otherPsychologicalSymptoms">Other psychological symptoms</string>
    <string name="otherSkinDisorder">Other skin disorder</string>
    <string name="otherTypesOfViolence">Other types of violence</string>
    <string name="painDuringUrination">Pain during urination (dysuria)</string>
    <string name="pruritus">Pruritus</string>
    <string name="reducedPoorFetalMovement">Reduced or poor fetal movement</string>
    <string name="shortnessOfBreath">Shortness Of Breath</string>
    <string name="tiredness">Tiredness</string>
    <string name="trauma">Trauma</string>
    <string name="vaginalBleeding">Vaginal bleeding</string>
    <string name="otherSpecificComplaint">Other (specify)</string>
    <string name="specify">Specify</string>
    <string name="dangerSigns">Danger signs</string>
    <string name="none">None</string>
    <string name="bleedingVaginally">Bleeding vaginally</string>
    <string name="centralCyanosis">Central cyanosis</string>
    <string name="convulsing">Convulsing</string>
    <string name="fever">Fever</string>
    <string name="severeHeadache">Severe headache</string>
    <string name="visualDisturbance">Visual disturbance</string>
    <string name="imminentDelivery">Imminent delivery</string>
    <string name="labour">Labour</string>
    <string name="looksVeryIll">Looks very ill</string>
    <string name="severeVomiting">Sever vomiting</string>
    <string name="severePain">Sever pain</string>
    <string name="severeAbdominalPain">Sever abdominal pain</string>
    <string name="unconscious">Unconscious</string>
    <string name="nextContact">Next (Contact)</string>
    <string name="referral">Refer patient</string>
    <string name="contactIcon">Action icon</string>
    <string name="contact">Contact</string>
    <string name="quickCheck">Quick check</string>
    <string name="profile">Profile</string>
    <string name="physicalExam">Physical exam</string>
    <string name="symptoms">Symptoms</string>
    <string name="test">Tests</string>
    <string name="counselling">Counselling</string>
    <string name="medicationFollowup">Medication follow-up</string>
    <string name="medication">What medications (including supplements and vitamins) is she still taking?</string>
    <string name="dontKnow">Don\'t know</string>
    <string name="antacids">Antacids</string>
    <string name="aspirin">Aspirin</string>
    <string name="calcium">Calcium</string>
    <string name="doxylamine">Doxylamine</string>
    <string name="folicAcid">Folic acid</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="metoclopramide">Metoclopramide</string>
    <string name="vitaminA">Vitamin A</string>
    <string name="analgesic">Analgesic</string>
    <string name="antiConvulsive">Anti-convulsive</string>
    <string name="antiDiabetic">Anti-diabetic</string>
    <string name="anthelmintic">Anthelmintic</string>
    <string name="antiHypertensive">Anti-hypertensive</string>
    <string name="antiMalarials">Anti-malarials</string>
    <string name="antivirals">Antivirals</string>
    <string name="antiretrovirals">Antiretrovirals</string>
    <string name="antitussive">Antitussive</string>
    <string name="asthma">Asthma</string>
    <string name="contrimoxazole">Contrimoxazole</string>
    <string name="otherAntibiotics">Other antibiotics</string>
    <string name="hematinic">Hematinic</string>
    <string name="hemorrhoidalMedication">Hemorrhoidal medication</string>
    <string name="multivitamin">Multivitamin</string>
    <string name="thyroidMedication">Thyroid medication</string>
    <string name="otherMedication">Other (specify)</string>
    <string name="psychologicalSymptoms">Psychological symptoms?</string>
    <string name="anyPsychologicalSymptoms">Any psychological symptoms?</string>
    <string name="nauseaVomiting">Nausea and vomiting</string>
    <string name="heartBurn">Heartburn</string>
    <string name="varicoseVeins">Varicose veins</string>
    <string name="dysuria">Pain during urination (dysuria)</string>
    <string name="otherSymptoms">Any other symptoms</string>
    <string name="otherSymptomsBackPain">Any other symptoms related to low back pain and pelvic pain?</string>
    <string name="otherSymptomsVaricose">Any other symptoms related to varicose veins or oedema?</string>
    <string name="breathingDifficulty">Breathing difficulty</string>
    <string name="breathless">Breathless during routine activities</string>
    <string name="cough3weeks">Cough lasting more than 3 weeks</string>
    <string name="tiredEasily">Gets tired easily</string>
    <string name="vaginalDischarge">Vaginal discharge</string>
    <string name="heightWeight">Height &amp; Weight</string>
    <string name="height">Height (cm)</string>
    <string name="preGestationalWeight">Pre-gestational weight (kg)</string>
    <string name="preGestationalWeightUnknown">Pre-gestational weight unknown</string>
    <string name="currentWeight">Current weight (kg)</string>
    <string name="bmi">Body mass index (BMI) = ${bmi} Woman is ${weight}. Weight gain during pregnancy should be 11.5 -16 kg </string>
    <string name="weightGain">Average weight gain per week since last contact: ${weight} kg. Total weight gain in pregnancy so far: ${gain} kg</string>
    <string name="healthyAlert">Healthy eating and keeping physically active counselling</string>
    <string name="bloodPressure">Blood pressure</string>
    <string name="systolic">Systolic blood pressure - SBP (mmHg)</string>
    <string name="diastolic">Diastolic blood pressure - DBP (mmHg)</string>
    <string name="unableToRecordBP">Unable to record BP</string>
    <string name="bpCuffBroken">BP cuff (sphygmomanometer) not available</string>
    <string name="bpCuffNotAvailable">BP cuff (sphygmomanometer) is broken</string>
    <string name="other">Other</string>
    <string name="maternalExam">Maternal exam</string>
    <string name="temperature">Temperature</string>
    <string name="pulseRate">Pulse rate (bpm)</string>
    <string name="pallorPresent">Pallor present?</string>
    <string name="respiratoryExam">Respiratory exam</string>
    <string name="notDone">Not done</string>
    <string name="normal">Normal</string>
    <string name="abnormal">Abnormal</string>
    <string name="oximetry">Oximetry (%)</string>
    <string name="dyspnoea">Dyspnoea</string>
    <string name="rapidBreathing">Rapid breathing</string>
    <string name="slowBreathing">Slow breathing</string>
    <string name="wheezing">Wheezing</string>
    <string name="rales">Rales</string>
    <string name="cardiacExam">Cardiac exam</string>
    <string name="cardiacExamAbnormal">Cardiac exam: abnormal</string>
    <string name="heartMurmur">Heart murmur</string>
    <string name="weakPulse">Weak pulse</string>
    <string name="tachycardia">Tachycardia</string>
    <string name="bradycardia">Bradycardia</string>
    <string name="arrhythmia">Arrhythmia</string>
    <string name="cyanosis">Cyanosis</string>
    <string name="coldSweats">Cold sweats</string>
    <string name="breastExam">Breast exam</string>
    <string name="breastExamAbnormal">Breast exam: abnormal</string>
    <string name="nodule">Nodule</string>
    <string name="discharge">Discharge</string>
    <string name="flushing">Flushing</string>
    <string name="localPain">Local pain</string>
    <string name="bleeding">Bleeding</string>
    <string name="increasedTemperature">Increased temperature</string>
    <string name="abdominalExam">Abdominal exam</string>
    <string name="abdominalExamAbnormal">Abdominal exam: abnormal</string>
    <string name="massTumor">Mass/tumor</string>
    <string name="superficialPalpation">Pain on superficial palpation</string>
    <string name="deepPalpation">Pain on deep palpation</string>
    <string name="painfulDecompression">Painful decompression</string>
    <string name="pelvicExam">Pelvic exam (visual)</string>
    <string name="pelvicExamAbnormal">Pelvic exam : abnormal</string>
    <string name="amnioticFluid">Evidence of amniotic fluid</string>
    <string name="foulDischarge">Foul-smelling vaginal discharge</string>
    <string name="erythematousPapules">Clusters of erythematous papules</string>
    <string name="testDue">Tests due</string>
    <string name="ultrasoundTest">Ultrasound Test</string>
    <string name="bloodType">Blood type test</string>
    <string name="syphilisTest">Syphilis test</string>
    <string name="urineTest">Urine test</string>
    <string name="bloodHeamoglobinTest">Blood haemoglobin test</string>
    <string name="bloodGlucoseTest">Blood glucose test</string>
    <string name="otherTest">Other glucose test</string>
    <string name="clientList">Client list</string>
</resources>