<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".ui.components.quickcheck.QuickCheckFragment">
    <ScrollView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonViews"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questionLabelStyle"
                android:text="@string/reason"/>
            <RadioGroup
                android:id="@+id/reasonGroup"
                android:checkedButton="@+id/reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/firstContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/firstContact"/>
                <RadioButton
                    android:id="@+id/scheduledContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scheduledContact"/>
                <RadioButton
                    android:id="@+id/specificComplaint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/specificComplaint"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/specificComplaints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/questionLabelStyle"
                    android:text="@string/specificComplaints"/>
                <CheckBox
                    android:id="@+id/abnormalVaginalDischarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/abnormalVaginalDischarge"/>
                <CheckBox
                    android:id="@+id/changesInBloodPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/changesInBloodPressure"/>
                <CheckBox
                    android:id="@+id/constipation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/constipation"/>
                <CheckBox
                    android:id="@+id/contractions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/contractions"/>
                <CheckBox
                    android:id="@+id/cough"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cough"/>
                <CheckBox
                    android:id="@+id/depression"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/depression"/>
                <CheckBox
                    android:id="@+id/anxiety"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/anxiety"/>
                <CheckBox
                    android:id="@+id/dizziness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dizziness"/>
                <CheckBox
                    android:id="@+id/domesticViolence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/domesticViolence"/>
                <CheckBox
                    android:id="@+id/extremePelvicPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/extremePelvicPain"/>
                <CheckBox
                    android:id="@+id/feverSS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fever"/>
                <CheckBox
                    android:id="@+id/fullAbdominalPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fullAbdominalPain"/>
                <CheckBox
                    android:id="@+id/fluSymptoms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fluSymptoms"/>
                <CheckBox
                    android:id="@+id/fluidLoss"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fluidLoss"/>
                <CheckBox
                    android:id="@+id/headache"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/headache"/>
                <CheckBox
                    android:id="@+id/heartburn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/heartburn"/>
                <CheckBox
                    android:id="@+id/legCramps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/legCramps"/>
                <CheckBox
                    android:id="@+id/legPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/legPain"/>
                <CheckBox
                    android:id="@+id/lowBackPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lowBackPain"/>
                <CheckBox
                    android:id="@+id/pelvicPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pelvicPain"/>
                <CheckBox
                    android:id="@+id/nauseaVomitingDiarrhoea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nauseaVomitingDiarrhoea"/>
                <CheckBox
                    android:id="@+id/noFetalMovement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/noFetalMovement"/>
                <CheckBox
                    android:id="@+id/oedema"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/oedema"/>
                <CheckBox
                    android:id="@+id/otherBleeding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/otherBleeding"/>
                <CheckBox
                    android:id="@+id/otherPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/otherPain"/>
                <CheckBox
                    android:id="@+id/otherPsychologicalSymptoms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/otherPsychologicalSymptoms"/>
                <CheckBox
                    android:id="@+id/otherSkinDisorder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/otherSkinDisorder"/>
                <CheckBox
                    android:id="@+id/otherTypesOfViolence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/otherTypesOfViolence"/>
                <CheckBox
                    android:id="@+id/painDuringUrination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/painDuringUrination"/>
                <CheckBox
                    android:id="@+id/pruritus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pruritus"/>
                <CheckBox
                    android:id="@+id/reducedPoorFetalMovement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reducedPoorFetalMovement"/>
                <CheckBox
                    android:id="@+id/shortnessOfBreath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/shortnessOfBreath"/>
                <CheckBox
                    android:id="@+id/tiredness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tiredness"/>
                <CheckBox
                    android:id="@+id/trauma"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/trauma"/>
                <CheckBox
                    android:id="@+id/vaginalBleeding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/vaginalBleeding"/>
                <CheckBox
                    android:id="@+id/visualDisturbanceSC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/visualDisturbance"/>
                <CheckBox
                    android:id="@+id/otherSpecificComplaintLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/otherSpecificComplaint"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/otherSpecificComplaint"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questionLabelStyle"
                android:text="@string/dangerSigns"/>

            <CheckBox
                android:id="@+id/none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/none"/>
            <LinearLayout
                android:id="@+id/dangerSignsLayout"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <CheckBox
                    android:id="@+id/bleedingVaginally"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bleedingVaginally"/>
                <CheckBox
                    android:id="@+id/centralCyanosis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/centralCyanosis"/>
                <CheckBox
                    android:id="@+id/convulsing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/convulsing"/>
                <CheckBox
                    android:id="@+id/fever"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fever"/>
                <CheckBox
                    android:id="@+id/severeHeadache"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/severeHeadache"/>
                <CheckBox
                    android:id="@+id/visualDisturbance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/visualDisturbance"/>
                <CheckBox
                    android:id="@+id/imminentDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/imminentDelivery"/>
                <CheckBox
                    android:id="@+id/labour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/labour"/>
                <CheckBox
                    android:id="@+id/looksVeryIll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/looksVeryIll"/>
                <CheckBox
                    android:id="@+id/severeVomiting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/severeVomiting"/>
                <CheckBox
                    android:id="@+id/severePain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/severePain"/>
                <CheckBox
                    android:id="@+id/severeAbdominalPain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/severeAbdominalPain"/>
                <CheckBox
                    android:id="@+id/unconscious"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/unconscious"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/buttonViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/startContactBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/nextContact" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/referPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/referral"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
