<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.components.tests.TestsFragment">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/formStyle"
            android:id="@+id/dueTestsView">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/questionLabelStyle"
                android:text="@string/testDue"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ultrasoundTest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/ultrasoundTest"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/bloodType"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/bloodType"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/syphilisTest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/syphilisTest"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/urineTest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/urineTest"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/bloodHeamoglobinTest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/bloodHeamoglobinTest"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/bloodGlucoseTest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/bloodGlucoseTest"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/otherTest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/otherTest"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>